--- a/bin/src/main/resources/application.properties
+++ b/bin/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 # Server
-server.port=8080
+server.port=8089
 
 # MySQL
 spring.datasource.url= jdbc:mysql://localhost:3306/ventas_db?createDatabaseIfNotExist=true&useSSL=false&useTimezone=true&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=wacaballa
 
 #Mysql
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
